<resources>
    <string name="app_name">Filmku</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Judul FIlm</string>
    <string name="description">Deskripsi FIlm</string>
    <string name="movies">movies</string>
    <string name="tvShow">tv show</string>
    <string name="release">tanggal rilis</string>
</resources>